# lsp-word

./: Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
src/: main.rs
