[package]
name = "lsp-word"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
directories = "6.0.0"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
regex = "1.11.2"
serde = "1.0.219"
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std"] }
