[package]
name = "lsp-word"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive"] }
directories = "6.0.0"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "std"] }
